Deal with missing secrets

--- a/Todo.API/appsettings.Development.json
+++ b/Todo.API/appsettings.Development.json
@@ -10,6 +10,7 @@
     "Default": "Filename=db/todo.db"
   },
   "AppSettings": {
+    "SecretSafeStorage": "https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets?view=aspnetcore-5.0&tabs=windows",
     "Secret": ""
   }
 }
